--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "jest": "^24.8.0",
-    "sqlite3": "^4.0.9"
+    "sqlite3": "^4.0.9",
+    "supertest": "^4.0.2"
   }
 }
